Bug 1435670 - Remove assert when there's no capability for a device. r=jib

Not all devices have capabilities. Our code is already setup to handle that
case by defaulting to a capability with width,height,maxFPS=0 and propagating
the failure to start.

MozReview-Commit-ID: AZJKZeBrYC2